# beauty_shop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: deploy.yaml  test.yaml
src/api/base/: constants.py  paginator.py  permissions.py  serializers.py
src/api/v1/: urls.py
src/api/v1/cart/: apps.py  signals.py  tests.py  urls.py
src/api/v1/feedback/: apps.py  permissions.py  serializers.py  services.py  urls.py  views.py
src/api/v1/order/: apps.py  paginator.py  urls.py
src/api/v1/product/: admin.py  apps.py  constants.py  swagger_examples.py  urls.py
src/api/v1/users/: apps.py  serializers.py  services.py  urls.py  views.py
src/config/: settings.py  urls.py
src/core/base/: models.py
src/core/cart/: admin.py  apps.py  signals.py
src/core/cart/factories/: __init__.py  cart.py  cartitem.py
src/core/cart/migrations/: 0001_initial.py  0002_cartitem_currency_alter_cartitem_product.py  0003_alter_cartitem_currency.py
src/core/cart/models/: __init__.py  cart.py  cartitems.py
src/core/cart/tests/: conftest.py  factories.py  test_cart.py
src/core/feedback/: apps.py  models.py
src/core/feedback/migrations/: 0001_initial.py  0002_alter_feedback_product.py
src/core/order/: admin.py  apps.py  constants.py
src/core/order/migrations/: 0001_initial.py  0002_alter_order_email_alter_order_phone.py  0003_alter_order_status.py  0004_alter_order_status.py  0005_orderitem_currency_alter_orderitem_product.py  (+1 more)
src/core/product/: admin.py  apps.py  constants.py  signals.py
src/core/user_auth/: admin.py  apps.py  backends.py  factories.py  manager.py  models.py  signals.py
src/core/user_profile/: admin.py  apps.py  constants.py  models.py  signals.py
src/profile_app/: admin.py  apps.py  models.py  signals.py
src/user_auth/: admin.py  apps.py  backends.py  managers.py  models.py
src/user_auth/migrations/: 0001_initial.py
src/utils/: phone.py
tests/unit/: test_phone_validation.py
(+136 files in other folders)
