[tool.poetry]
name = "beauty-shop"
version = "0.1.0"
description = ""
authors = ["Vaipik <n.khylko@gmail.com>"]
readme = "README.md"
packages = [{include = "beauty_shop"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.3"
djangorestframework = "^3.14.0"
django-treebeard = "^4.7"
psycopg = "^3.1.9"


[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
django-debug-toolbar = "^4.1.0"
pre-commit = "^3.3.3"
black = "^23.7.0"
ruff = "^0.0.280"
isort = "^5.12.0"
factory-boy = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = [
    "E",
    "F",
    "D"
]
exclude = ["settings.py", "admin.py", "migrations", "README.md"]
ignore = ["D100", "D104", "D105", "D107", "F821"]
